@@ -1,4 +1,8 @@
 25/11/14 Julien Dutheil
+* bppalnscore output contiguous segments in mase selection.
+* bppalnscore site selection works with codon alphabets.
+
+24/11/14 Julien Dutheil
 * bppSeqMan can now read alignments and perform site seleciton priori to any analysis.
 
 28/09/14 -*- Version 2.2.0 -*- 
